--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab1</title>
+    <meta charset="utf-8">
+    <title>Моя страница</title>
+    <a href="contact_me.html"></a>
 </head>
 <body>
-    <p>Hello world</p>
+   <h1>Другова Алиса</h1>
+   <h3>3 курс, прикладная информатика в экономике</h3>
+   <h3>Средний уровень подготовки</h3>
+   <h3>Университет: https://kemsu.ru</h3>
+   <h3>Год окончания: 2024</h3>
+   <h3>Соцсети:</h3>
+   <ul>
+     <li>✨Вконтакте</li>
+     <li>✨Telegram</li>
+     <li>✨Discord</li>
+   </ul>
+
+  <h4>Лабораторная 2</h4>
+  <ul>
+    <li><a href="ideTable.html">Таблица</a></li>
+    <li><a href="contact_me.html">Форма</a></li>
+  </ul>
 </body>
 </html>
